fix: theme toggle and alignment 📐

--- a/src/app/navigation/Navbar.scss
+++ b/src/app/navigation/Navbar.scss
@@ -12,7 +12,6 @@
         display: block;
         width: 25px;
         height: 3px;
-        background-color: #000; // Or your desired color
         margin: 5px auto;
         transition: transform 0.3s ease, opacity 0.3s ease; /* Add transitions */
     }
